2008-08-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/DgramTwoWayStreamTest.cpp: stub for
	testing packet corruption detection.

2008-08-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: stop the character
	sequence "." from being interpreted as a number.

	* src/libYARP_OS/harness/ResourceFinderTest.cpp: start adding
	regression tests for ResourceFinder

	* src/libYARP_OS/src/ResourceFinder.cpp: implement "--from config.ini"
	for loading settings into ResourceFinder from a file.  This is
	like the "--file config.ini" behavior of the Module class and
	yarpdev etc.  The names are inconsistent for complicated reasons.

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: make ResourceFinder
	a regular "Searchable" so that methods like findGroup work.


2008-08-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: implement a "yarp resource"
	command, which uses the ResourceFinder to locate configuration
	files and other resource files.  Handy for testing your
	search path.  Run "yarp resource" for some tips on usage.

	* src/libYARP_OS/include/yarp/Companion.h: add hook for
	"yarp resource" command

	* src/libYARP_OS/src/ResourceFinder.cpp: improve search for 
	policy file

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: some changes
	to API, more to come

2008-8-11 Lorenzo Natale <nat@liralab.it>
	* src/libYARP_OS/include/yarp/os/RateThread.h/RateThread.cpp:
	methods getEstPeriod()/getEstUsed() now returns average and std

2008-8-11 Lorenzo Natale <nat@liralab.it>
	* src/libYARP_OS/include/yarp/os/all.h: added RateThread.h

2008-07-28  Lorenzo Natale <nat@liralab.it>
	* src/yarp/libYARP_dev/include/yarp/dev/DataSource.h: 
	removed IPreciselyTimed interface
	* src/yarp/libYARP_dev/include/yarp/dev/PreciselyTimed.h:
	added IPreciselyTimedInterface
	* src/yarp/libYARP_dev/include/yarp/dev/ServerInertial.h
	* src/yarp/libYARP_dev/src/ServerInertial.cpp: added timestamps in